Style: Fix error message spacing on auth pages for mobile size

--- a/assets/stylesheets/AuthPages/AuthPages.scss
+++ b/assets/stylesheets/AuthPages/AuthPages.scss
@@ -12,7 +12,7 @@
   }
 
   .message-space {
-    height: 80px;
+    height: 112px;
     max-width: 500px;
     width: 90%;
     margin: 10px auto;
